# RustInSynth

./: ARCHITECTURE.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/audio/: engine.rs  mod.rs
src/core/: envelope.rs  event.rs  filter.rs  lfo.rs  mod.rs  oscillator.rs  params.rs  presets.rs  types.rs  voice.rs
src/gui/: app.rs  mod.rs  theme.rs  widgets.rs
src/input/: keyboard.rs  midi.rs  mod.rs
