[package]
name = "rustsynth"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
crossterm = "0.27"
parking_lot = "0.12"
midir = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
egui = "0.28"
egui_dock = "0.13"
eframe = { version = "0.28", features = ["default"] }
dashmap = "6.1"

[dev-dependencies]
tempfile = "3.8"
